// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description List Auto Column Widths Description List 1`] = `
<dl
  className="pf-c-description-list pf-m-auto-column-widths"
/>
`;

exports[`Description List Description 1`] = `
<dt
  aria-labelledby="description-1"
  className="pf-c-description-list__description custom-description-list-description"
>
  <span
    className="pf-c-description-list__text"
  >
    test
  </span>
</dt>
`;

exports[`Description List Description List 2xl breakpoint 1`] = `
<dl
  className="pf-c-description-list pf-m-2-col-on-2xl"
/>
`;

exports[`Description List Description List default 1`] = `
<dl
  className="pf-c-description-list"
/>
`;

exports[`Description List Description List default 3 col 1`] = `
<dl
  className="pf-c-description-list pf-m-3-col"
/>
`;

exports[`Description List Description List lg breakpoint 1`] = `
<dl
  className="pf-c-description-list pf-m-3-col-on-lg"
/>
`;

exports[`Description List Description List md breakpoint 1`] = `
<dl
  className="pf-c-description-list pf-m-2-col-on-md"
/>
`;

exports[`Description List Description List xl breakpoint 1`] = `
<dl
  className="pf-c-description-list pf-m-1-col-on-xl"
/>
`;

exports[`Description List Group 1`] = `
<div
  className="pf-c-description-list__group custom-description-list-group"
>
  test
</div>
`;

exports[`Description List Horizontal Description List 1`] = `
<dl
  className="pf-c-description-list pf-m-horizontal"
/>
`;

exports[`Description List Inline Grid Description List 1`] = `
<dl
  className="pf-c-description-list pf-m-inline-grid"
/>
`;

exports[`Description List Term default 1`] = `
<dt
  aria-labelledby="term-1"
  className="pf-c-description-list__term"
>
  <span>
    test
  </span>
</dt>
`;
